<resources>
    <string name="app_name">Casa de Eventos</string>
    <string name="str_br">Brasil</string>
    <string name="str_eventos">Eventos</string>
    <string name="str_clientes">Clientes</string>
    <string name="str_cliente">Cliente:</string>
    <string name="str_servicos">Serviços</string>
    <string name="str_servicos2">Serviços:</string>
    <string name="str_razao_social">Razão Social:</string>
    <string name="str_pagamento">Pagamento:</string>
    <string name="str_cnpj">CNPJ:</string>
    <string name="str_contrato">Contrato:</string>
    <string name="str_contratos">Contratos</string>
    <string name="str_descricao_empty">Preencha o campo descrição!</string>
    <string name="str_contrato_empty">Preencha o campo contrato!</string>
    <string name="str_servico_empty">Adicione serviços no evento!</string>
    <string name="str_contrato_found">Já existe um evento cadastrado para o contrato</string>
    <string name="str_telefone">Telefone:</string>
    <string name="str_email">E-mail:</string>
    <string name="str_endereco">Endereco:</string>
    <string name="str_tipo">Tipo:</string>
    <string name="str_descricao">Descrição:</string>
    <string name="str_valor">Valor:</string>
    <string name="str_cliente_editar">Editar Cliente</string>
    <string name="str_servico_editar">Editar Serviço</string>
    <string name="str_evento_editar">Editar Evento</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancela</string>
    <string name="str_full">Preencha todos os campos!</string>
    <string name="str_empty">Campo vazio!</string>
    <string name="str_delete">Deseja realmente apagar</string>
    <string name="str_remove">Remover</string>
    <string name="str_export">Deseja exportar</string>
    <string name="str_contacts">para seus contatos</string>
    <string name="str_exp_title">Exportar</string>
    <string name="str_find">Procurar:</string>
    <string name="str_yes">Sim</string>
    <string name="str_no">Não</string>
    <string name="str_found">já existe</string>
    <string name="str_not_found">não foi encontrado!</string>
    <string name="str_err_sql_query">Erro na consulta SQL</string>
    <string name="str_fail">Operação falhou!</string>
    <string name="str_msg_plus">conforme a mensagem abaixo:</string>
    <string name="str_fill">Preencha o campo</string>
    <string name="str_key_cliente">chave CNPJ</string>
    <string name="str_info_repeat">Informação repetida</string>
    <string name="str_key_telefone">número de telefone</string>
    <string name="str_key_email">endereço de email</string>
    <string name="str_in_db">no banco de dados!</string>
    <string name="str_read">para leitura!</string>
    <string name="str_write">para escrita!</string>
    <string name="str_err_sql_open">Erro abrindo banco de dados</string>
    <string name="str_success">Operação efetuada com êxito!</string>
    <string name="str_cli_x_tel">relação Cliente X Telefone</string>
    <string name="str_cli_x_mai">relação Cliente X Email</string>
    <string name="str_cli_x_end">relação Cliente X Endereço</string>
    <string name="str_eve_x_ser">relação Evento X Serviço</string>
    <string name="str_err_insert">Erro inserindo</string>
    <string name="str_err_update">Erro alterando</string>
    <string name="str_err_delete">Erro excluindo</string>
    <string name="str_inf_time">Data final igual ou menor que a inicial!</string>
    <string name="str_found_time">Já existe um contrato neste horário!</string>
    <string name="str_none">Nada selecionado!</string>
    <string name="str_contact_create">Criando contatos...</string>
    <string name="str_contact_add">Contato adicionado</string>
    <string name="str_contact_update">Contato atualizado</string>
    <string name="str_contact_add_fail">Criar contato falhou</string>
</resources>
