<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_medico_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_yellow"
    tools:context="br.com.alexandrebarboza.casadeeventos.EventoEditActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/label_evento_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/str_descricao"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

        <EditText
            android:id="@+id/edit_evento_descricao"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_evento_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="0dp"
        android:text="@string/str_cliente"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Small" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_evento_cliente1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <ImageButton
            android:id="@+id/button_procurar_evento_cliente"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="left|center"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            app:srcCompat="@android:drawable/ic_menu_search" />
   </LinearLayout>

   <TextView
        android:id="@+id/label_evento_contrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="0dp"
        android:text="@string/str_contrato"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_columnSpan="4" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:weightSum="1">

       <EditText
            android:id="@+id/edit_evento_contrato"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="16dp"
            android:textColor="@color/black" />

       <ImageButton
            android:id="@+id/button_procurar_evento_contrato"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="left|center"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            app:srcCompat="@android:drawable/ic_menu_search" />
   </LinearLayout>

    <TextView
        android:id="@+id/label_evento_servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="0dp"
        android:text="@string/str_servicos2"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Spinner
            android:id="@+id/spinner_evento_servicos"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp" />

        <ImageButton
            android:id="@+id/button_procurar_evento_servicos"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="left|center"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            app:srcCompat="@android:drawable/ic_menu_search" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_evento_pagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="0dp"
        android:text="@string/str_pagamento"
        android:textColor="@color/black"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/layout_evento_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="1" >

        <EditText
            android:id="@+id/edit_evento_pagamento"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/button_alterar_evento_pagamento"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            android:enabled="true"
            android:src="@drawable/ic_update" />

        <ImageButton
            android:id="@+id/button_excluir_evento_pagamento"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            android:enabled="false"
            android:src="@drawable/ic_delete_disabled" />

    </LinearLayout>
</LinearLayout>
