<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_servico_edit"
    android:background="@color/light_yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.alexandrebarboza.casadeeventos.ServicoEditActivity">

    <LinearLayout
        android:id="@+id/layout_tipo_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_tipo_servico"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/str_tipo"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="end"
            android:layout_gravity="right|center" />

        <EditText
            android:id="@+id/edit_tipo_servico"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_gravity="left|center" />

        <ImageButton
            android:id="@+id/button_procurar_tipo_servico"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="3dp"
            android:background="@drawable/bt_operation"
            app:srcCompat="@android:drawable/ic_menu_search"
            android:layout_gravity="left|center" />

    </LinearLayout>

    <LinearLayout
         android:id="@+id/layout_descricao_servico"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

        <TextView
            android:id="@+id/label_descricao_servico"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/str_descricao"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="end"
            android:layout_gravity="right|center" />

        <EditText
            android:id="@+id/edit_descricao_servico2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="40"
            android:textColor="@color/black"
            android:layout_gravity="left|center" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_valor_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_valor_servico"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/str_valor"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="end"
            android:layout_gravity="right|center" />

        <EditText
            android:id="@+id/edit_valor_servico"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_default_white"
            android:elevation="6dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="13"
            android:textColor="@color/black"
            android:layout_gravity="left|center" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        </LinearLayout>

    </LinearLayout>

